[gd_scene load_steps=6 format=3 uid="uid://bn5m2mxxs8keg"]

[ext_resource type="Script" path="res://Scenes/UserInterfaces/PlayerJoiningMenu/PlayerJoiningGradiant.gd" id="1_82rd3"]
[ext_resource type="Texture2D" uid="uid://cwx3qfrgr6dr8" path="res://Graphics/Icons/Controller.png" id="2_pl5us"]
[ext_resource type="Texture2D" uid="uid://bbksl28by1vc4" path="res://Graphics/Icons/Keyboard.png" id="3_0vkiw"]

[sub_resource type="LabelSettings" id="LabelSettings_q82nm"]
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_b0ujj"]
font_size = 10
font_color = Color(1, 1, 1, 0.513726)

[node name="PlayerJoiningGradiant" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_82rd3")

[node name="PlayerName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Player"
label_settings = SubResource("LabelSettings_q82nm")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="ControllerName" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 20.0
grow_horizontal = 2
label_settings = SubResource("LabelSettings_b0ujj")
horizontal_alignment = 1
text_overrun_behavior = 2

[node name="Controller" type="Control" parent="."]
layout_mode = 1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -16.0
offset_right = -8.0

[node name="Keyboard" type="TextureRect" parent="Controller"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0vkiw")
stretch_mode = 2

[node name="Controller" type="TextureRect" parent="Controller"]
visible = false
custom_minimum_size = Vector2(16, 16)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_pl5us")
stretch_mode = 2
